Fix overlapping datepicker

--- a/css/app/calendarlist.css
+++ b/css/app/calendarlist.css
@@ -303,9 +303,15 @@
 #scrollable {
 	overflow-y: auto;
 	overflow-x: hidden;
+	position: absolute;
 	top: 85px;
 	bottom: 44px;
 	width: 250px;
+	transition: 200ms margin ease-in-out;
+}
+
+#datepickercontainer.active + div#calendarlistcontainer #scrollable {
+	margin-top: 185px;
 }
 
 /* Spacing */
